fix the scroll bar on small screens

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -166,7 +166,7 @@ body {
   @include mobile() {
     max-width: 400px;
     grid-template-columns: 1fr;
-    overflow: scroll;
+    overflow: auto;
     justify-items: start;
   }
 }
